edit mocked data

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button default-href="#"></ion-back-button>
+      <ion-back-button [text]='"Inbox"' default-href="/home"></ion-back-button>
     </ion-buttons>
     <ion-buttons slot="end">
       <ion-button (click)="openPage('New contact')">
