--- a/src/app/register-contact/register-contact.component.html
+++ b/src/app/register-contact/register-contact.component.html
@@ -34,13 +34,13 @@
         <ion-button class="add" size="small" color="dark">
           <ion-icon name="add-outline"></ion-icon>
         </ion-button>
-        <ion-input placeholder="Add phone"></ion-input>
+        <ion-input placeholder="add phone"></ion-input>
       </ion-item>
       <ion-item class="phone">
         <ion-button class="add" size="small" color="dark">
           <ion-icon name="add-outline"></ion-icon>
         </ion-button>
-        <ion-input placeholder="Add email"></ion-input>
+        <ion-input placeholder="add email"></ion-input>
       </ion-item>
     </ion-list>
 
